{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 109,
  "lineage": "d092cbff-1fed-aabc-6b06-6f68b9dccbb7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip-1",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ff51aced6b70222",
            "domain": "vpc",
            "id": "eipalloc-05ff51aced6b70222",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-117-202-61.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.202.61",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_ip-1"
            },
            "tags_all": {
              "Name": "nat_ip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.arch-igw",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip-2",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-093e60b8cd148ec54",
            "domain": "vpc",
            "id": "eipalloc-093e60b8cd148ec54",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-225-24-249.us-east-2.compute.amazonaws.com",
            "public_ip": "18.225.24.249",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_ip-2"
            },
            "tags_all": {
              "Name": "nat_ip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.arch-igw",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump-ec2",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c20d88b0021158c6",
            "arn": "arn:aws:ec2:us-east-2:498692135370:instance/i-01f96a1b19ec8b38e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ansible-profile-role",
            "id": "i-01f96a1b19ec8b38e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c55646e4ff05cd33",
            "private_dns": "ip-69-69-1-67.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "69.69.1.67",
            "public_ip": "18.118.24.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-097d1fa1f4d388699",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-00285119e91acef82"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03a86e68f7b18dc7e",
            "tags": {
              "Name": "Bastion-Host"
            },
            "tags_all": {
              "Name": "Bastion-Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00285119e91acef82"
            ]
          },
          "dependencies": [
            "aws_autoscaling_group.application_tier",
            "aws_autoscaling_group.presentation_tier",
            "aws_eip.nat_ip-1",
            "aws_eip.nat_ip-2",
            "aws_iam_instance_profile.ansible",
            "aws_iam_role.ansible_role",
            "aws_internet_gateway.arch-igw",
            "aws_key_pair.terra-keypair",
            "aws_launch_template.application_tier",
            "aws_launch_template.presentation_tier",
            "aws_lb.application_tier",
            "aws_lb_target_group.application_tier",
            "aws_lb_target_group.front_end",
            "aws_nat_gateway.nat-gw-1",
            "aws_nat_gateway.nat-gw-2",
            "aws_security_group.arch-sg",
            "aws_subnet.arch-pri-sub-1",
            "aws_subnet.arch-pri-sub-2",
            "aws_subnet.arch-pub-sub-1",
            "aws_subnet.arch-pub-sub-2",
            "aws_vpc.arch-vpc",
            "data.aws_ami.amazon_linux_2023",
            "data.template_file.userdata",
            "local_file.private_key_pem",
            "tls_private_key.pri-terra-key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "arch-igw",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498692135370:internet-gateway/igw-08262f9faa3d44412",
            "id": "igw-08262f9faa3d44412",
            "owner_id": "498692135370",
            "tags": {
              "Name": "dellhoak-igw"
            },
            "tags_all": {
              "Name": "dellhoak-igw"
            },
            "vpc_id": "vpc-07485a88a20561c0e"
          },
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_tier",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:498692135370:loadbalancer/app/application-tier-lb/552248303f9db0ef",
            "arn_suffix": "app/application-tier-lb/552248303f9db0ef",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "application-tier-lb-297228878.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:498692135370:loadbalancer/app/application-tier-lb/552248303f9db0ef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-tier-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00285119e91acef82"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03a86e68f7b18dc7e"
              },
              {
                "subnet_id": "subnet-0f99f48617840a2f6"
              }
            ],
            "subnets": [
              "subnet-03a86e68f7b18dc7e",
              "subnet-0f99f48617840a2f6"
            ],
            "vpc_id": "vpc-07485a88a20561c0e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.arch-sg",
            "aws_subnet.arch-pub-sub-1",
            "aws_subnet.arch-pub-sub-2",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_end",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:498692135370:loadbalancer/app/front-end-lb/0e3bc987b86ed7af",
            "arn_suffix": "app/front-end-lb/0e3bc987b86ed7af",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "front-end-lb-1213604019.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:498692135370:loadbalancer/app/front-end-lb/0e3bc987b86ed7af",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "front-end-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00285119e91acef82"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03a86e68f7b18dc7e"
              },
              {
                "subnet_id": "subnet-0f99f48617840a2f6"
              }
            ],
            "subnets": [
              "subnet-03a86e68f7b18dc7e",
              "subnet-0f99f48617840a2f6"
            ],
            "vpc_id": "vpc-07485a88a20561c0e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.arch-sg",
            "aws_subnet.arch-pub-sub-1",
            "aws_subnet.arch-pub-sub-2",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "application_tier",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:498692135370:listener/app/application-tier-lb/552248303f9db0ef/f9b07fc2e28ec1cf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:498692135370:targetgroup/application-tier-lb-tg/b79f78efdf21511d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:498692135370:listener/app/application-tier-lb/552248303f9db0ef/f9b07fc2e28ec1cf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:498692135370:loadbalancer/app/application-tier-lb/552248303f9db0ef",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application_tier",
            "aws_lb_target_group.application_tier",
            "aws_security_group.arch-sg",
            "aws_subnet.arch-pub-sub-1",
            "aws_subnet.arch-pub-sub-2",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:498692135370:listener/app/front-end-lb/0e3bc987b86ed7af/59e42970fb19580f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:498692135370:targetgroup/front-end-lb-tg/37354396110f98af",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:498692135370:listener/app/front-end-lb/0e3bc987b86ed7af/59e42970fb19580f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:498692135370:loadbalancer/app/front-end-lb/0e3bc987b86ed7af",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.front_end",
            "aws_lb_target_group.front_end",
            "aws_security_group.arch-sg",
            "aws_subnet.arch-pub-sub-1",
            "aws_subnet.arch-pub-sub-2",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "application_tier",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:498692135370:targetgroup/application-tier-lb-tg/b79f78efdf21511d",
            "arn_suffix": "targetgroup/application-tier-lb-tg/b79f78efdf21511d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:498692135370:targetgroup/application-tier-lb-tg/b79f78efdf21511d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "application-tier-lb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07485a88a20561c0e"
          },
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:498692135370:targetgroup/front-end-lb-tg/37354396110f98af",
            "arn_suffix": "targetgroup/front-end-lb-tg/37354396110f98af",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:498692135370:targetgroup/front-end-lb-tg/37354396110f98af",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "front-end-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07485a88a20561c0e"
          },
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw-1",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ff51aced6b70222",
            "association_id": "eipassoc-0d702e1b017366634",
            "connectivity_type": "public",
            "id": "nat-00da39d49ee8cc3d4",
            "network_interface_id": "eni-019793c8489006eaf",
            "private_ip": "69.69.1.157",
            "public_ip": "18.117.202.61",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03a86e68f7b18dc7e",
            "tags": {
              "Name": "dellhoak-nat-gw-1"
            },
            "tags_all": {
              "Name": "dellhoak-nat-gw-1"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip-1",
            "aws_internet_gateway.arch-igw",
            "aws_subnet.arch-pub-sub-1",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw-2",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-093e60b8cd148ec54",
            "association_id": "eipassoc-0a438cb55f850def8",
            "connectivity_type": "public",
            "id": "nat-0dcaefc4728ee24d1",
            "network_interface_id": "eni-015a4ec4dfeb4d105",
            "private_ip": "69.69.2.219",
            "public_ip": "18.225.24.249",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f99f48617840a2f6",
            "tags": {
              "Name": "dellhoak-nat-gw-2"
            },
            "tags_all": {
              "Name": "dellhoak-nat-gw-2"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip-2",
            "aws_internet_gateway.arch-igw",
            "aws_subnet.arch-pub-sub-2",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "allow_all_nacl",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498692135370:network-acl/acl-03d414c06cf1f6d7a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03d414c06cf1f6d7a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "498692135370",
            "subnet_ids": [],
            "tags": {
              "Name": "my-permissive-nacl"
            },
            "tags_all": {
              "Name": "my-permissive-nacl"
            },
            "vpc_id": "vpc-07485a88a20561c0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "allow_sub1",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0103e0087d908fe4c",
            "network_acl_id": "acl-03d414c06cf1f6d7a",
            "subnet_id": "subnet-018c90b5bc2ce0aad"
          },
          "dependencies": [
            "aws_network_acl.allow_all_nacl",
            "aws_subnet.arch-pri-sub-1",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "allow_sub2",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0fe110cb68b2dfb2f",
            "network_acl_id": "acl-03d414c06cf1f6d7a",
            "subnet_id": "subnet-09dddb841374c37f6"
          },
          "dependencies": [
            "aws_network_acl.allow_all_nacl",
            "aws_subnet.arch-pri-sub-2",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "allow_sub3",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-065df8b4ba2d70823",
            "network_acl_id": "acl-03d414c06cf1f6d7a",
            "subnet_id": "subnet-03a86e68f7b18dc7e"
          },
          "dependencies": [
            "aws_network_acl.allow_all_nacl",
            "aws_subnet.arch-pub-sub-1",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "allow_sub4",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-079c1d390b8ef5621",
            "network_acl_id": "acl-03d414c06cf1f6d7a",
            "subnet_id": "subnet-0f99f48617840a2f6"
          },
          "dependencies": [
            "aws_network_acl.allow_all_nacl",
            "aws_subnet.arch-pub-sub-2",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route-1",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498692135370:route-table/rtb-0394600c1ae9c32c0",
            "id": "rtb-0394600c1ae9c32c0",
            "owner_id": "498692135370",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00da39d49ee8cc3d4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dellhoak-CRT-1"
            },
            "tags_all": {
              "Name": "dellhoak-CRT-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07485a88a20561c0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip-1",
            "aws_internet_gateway.arch-igw",
            "aws_nat_gateway.nat-gw-1",
            "aws_subnet.arch-pub-sub-1",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route-2",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498692135370:route-table/rtb-00b1cd63d22c2c053",
            "id": "rtb-00b1cd63d22c2c053",
            "owner_id": "498692135370",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dcaefc4728ee24d1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dellhoak-CRT-2"
            },
            "tags_all": {
              "Name": "dellhoak-CRT-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-07485a88a20561c0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip-2",
            "aws_internet_gateway.arch-igw",
            "aws_nat_gateway.nat-gw-2",
            "aws_subnet.arch-pub-sub-2",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498692135370:route-table/rtb-08bc06fc50c87ee61",
            "id": "rtb-08bc06fc50c87ee61",
            "owner_id": "498692135370",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08262f9faa3d44412",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dellhoak-MRT"
            },
            "tags_all": {
              "Name": "dellhoak-MRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-07485a88a20561c0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.arch-igw",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-1",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0294f09f68babae62",
            "route_table_id": "rtb-0394600c1ae9c32c0",
            "subnet_id": "subnet-018c90b5bc2ce0aad"
          },
          "dependencies": [
            "aws_eip.nat_ip-1",
            "aws_internet_gateway.arch-igw",
            "aws_nat_gateway.nat-gw-1",
            "aws_route_table.private_route-1",
            "aws_subnet.arch-pri-sub-1",
            "aws_subnet.arch-pub-sub-1",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-2",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe15be4be5e95457",
            "route_table_id": "rtb-00b1cd63d22c2c053",
            "subnet_id": "subnet-09dddb841374c37f6"
          },
          "dependencies": [
            "aws_eip.nat_ip-2",
            "aws_internet_gateway.arch-igw",
            "aws_nat_gateway.nat-gw-2",
            "aws_route_table.private_route-2",
            "aws_subnet.arch-pri-sub-2",
            "aws_subnet.arch-pub-sub-2",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association-1",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038edd71c5e12e326",
            "route_table_id": "rtb-08bc06fc50c87ee61",
            "subnet_id": "subnet-03a86e68f7b18dc7e"
          },
          "dependencies": [
            "aws_internet_gateway.arch-igw",
            "aws_route_table.public_route",
            "aws_subnet.arch-pub-sub-1",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association-2",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0973e880748e67e98",
            "route_table_id": "rtb-08bc06fc50c87ee61",
            "subnet_id": "subnet-0f99f48617840a2f6"
          },
          "dependencies": [
            "aws_internet_gateway.arch-igw",
            "aws_route_table.public_route",
            "aws_subnet.arch-pub-sub-2",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "arch-sg",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498692135370:security-group/sg-00285119e91acef82",
            "description": "Allow ALL inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00285119e91acef82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "arch-sg",
            "name_prefix": "",
            "owner_id": "498692135370",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dellhoak-sg"
            },
            "tags_all": {
              "Name": "dellhoak-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07485a88a20561c0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498692135370:security-group/sg-0f7a882555e7f2084",
            "description": "Security group for RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7a882555e7f2084",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "498692135370",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07485a88a20561c0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arch-pri-sub-1",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498692135370:subnet/subnet-018c90b5bc2ce0aad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "69.69.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018c90b5bc2ce0aad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "498692135370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dellhoak-pri-sub-1"
            },
            "tags_all": {
              "Name": "dellhoak-pri-sub-1"
            },
            "vpc_id": "vpc-07485a88a20561c0e"
          },
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arch-pri-sub-2",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498692135370:subnet/subnet-09dddb841374c37f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "69.69.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09dddb841374c37f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "498692135370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dellhoak-pri-sub-2"
            },
            "tags_all": {
              "Name": "dellhoak-pri-sub-2"
            },
            "vpc_id": "vpc-07485a88a20561c0e"
          },
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arch-pub-sub-1",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498692135370:subnet/subnet-03a86e68f7b18dc7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "69.69.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a86e68f7b18dc7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "498692135370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dellhoak-pub-sub-1"
            },
            "tags_all": {
              "Name": "dellhoak-pub-sub-1"
            },
            "vpc_id": "vpc-07485a88a20561c0e"
          },
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arch-pub-sub-2",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498692135370:subnet/subnet-0f99f48617840a2f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "69.69.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f99f48617840a2f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "498692135370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dellhoak-pub-sub-2"
            },
            "tags_all": {
              "Name": "dellhoak-pub-sub-2"
            },
            "vpc_id": "vpc-07485a88a20561c0e"
          },
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "arch-vpc",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498692135370:vpc/vpc-07485a88a20561c0e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "69.69.0.0/16",
            "default_network_acl_id": "acl-0f1e483f21a2faa1d",
            "default_route_table_id": "rtb-04e5b3f3c449d2bd8",
            "default_security_group_id": "sg-05d53a8540b44434c",
            "dhcp_options_id": "dopt-01e9e4b5c9482d1d7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07485a88a20561c0e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04e5b3f3c449d2bd8",
            "owner_id": "498692135370",
            "tags": {
              "Name": "dellhoak-vpc"
            },
            "tags_all": {
              "Name": "dellhoak-vpc"
            }
          }
        }
      ]
    }
  ]
}